@@ -8,6 +8,7 @@ Revision history for DBIx::Class
           prepare_cached useful across paged resutsets
         - Support for MS Access databases via DBD::ODBC and DBD::ADO (only
           Win32 support currently tested)
+        - Support for the Firebird RDBMS over the new DBD::Firebird driver
         - IC::DateTime support for MSSQL over DBD::ADO
         - Both the ::ODBC and ::ADO dispatchers now warn if a rdbms-specific
           driver is not found for this connection before falling back to
